diesel_derives/src/tests/snapshots/diesel_derives__tests__insertable_table_name_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(Insertable)]\n#[diesel(table_name = crate::schema::admin_users)]\nstruct User {\n    id: i32,\n    name: String,\n}\n"
---
const _: () = {
    use ::diesel;
    impl diesel::insertable::Insertable<crate::schema::admin_users::table> for User
    where
        i32: diesel::expression::AsExpression<
            <crate::schema::admin_users::r#id as diesel::Expression>::SqlType,
        >,
        String: diesel::expression::AsExpression<
            <crate::schema::admin_users::r#name as diesel::Expression>::SqlType,
        >,
    {
        type Values = <(
            std::option::Option<diesel::dsl::Eq<crate::schema::admin_users::r#id, i32>>,
            std::option::Option<
                diesel::dsl::Eq<crate::schema::admin_users::r#name, String>,
            >,
        ) as diesel::insertable::Insertable<crate::schema::admin_users::table>>::Values;
        fn values(
            self,
        ) -> <(
            std::option::Option<diesel::dsl::Eq<crate::schema::admin_users::r#id, i32>>,
            std::option::Option<
                diesel::dsl::Eq<crate::schema::admin_users::r#name, String>,
            >,
        ) as diesel::insertable::Insertable<crate::schema::admin_users::table>>::Values {
            diesel::insertable::Insertable::<
                crate::schema::admin_users::table,
            >::values((
                std::option::Option::Some(
                    diesel::ExpressionMethods::eq(
                        crate::schema::admin_users::r#id,
                        self.id,
                    ),
                ),
                std::option::Option::Some(
                    diesel::ExpressionMethods::eq(
                        crate::schema::admin_users::r#name,
                        self.name,
                    ),
                ),
            ))
        }
    }
    impl<'insert> diesel::insertable::Insertable<crate::schema::admin_users::table>
    for &'insert User
    where
        &'insert i32: diesel::expression::AsExpression<
            <crate::schema::admin_users::r#id as diesel::Expression>::SqlType,
        >,
        &'insert String: diesel::expression::AsExpression<
            <crate::schema::admin_users::r#name as diesel::Expression>::SqlType,
        >,
    {
        type Values = <(
            std::option::Option<
                diesel::dsl::Eq<crate::schema::admin_users::r#id, &'insert i32>,
            >,
            std::option::Option<
                diesel::dsl::Eq<crate::schema::admin_users::r#name, &'insert String>,
            >,
        ) as diesel::insertable::Insertable<crate::schema::admin_users::table>>::Values;
        fn values(
            self,
        ) -> <(
            std::option::Option<
                diesel::dsl::Eq<crate::schema::admin_users::r#id, &'insert i32>,
            >,
            std::option::Option<
                diesel::dsl::Eq<crate::schema::admin_users::r#name, &'insert String>,
            >,
        ) as diesel::insertable::Insertable<crate::schema::admin_users::table>>::Values {
            diesel::insertable::Insertable::<
                crate::schema::admin_users::table,
            >::values((
                std::option::Option::Some(
                    diesel::ExpressionMethods::eq(
                        crate::schema::admin_users::r#id,
                        &self.id,
                    ),
                ),
                std::option::Option::Some(
                    diesel::ExpressionMethods::eq(
                        crate::schema::admin_users::r#name,
                        &self.name,
                    ),
                ),
            ))
        }
    }
    impl diesel::internal::derives::insertable::UndecoratedInsertRecord<
        crate::schema::admin_users::table,
    > for User {}
};
